workloads/wireguard/kustomization/overlays/admin/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wireguard-admin-deployment
  labels:
    app.kubernetes.io/name: wireguard-admin-deployment

spec:
  replicas: 1
  revisionHistoryLimit: 3

  template:
    spec:
      containers:
        - name: wireguard

      volumes:
        - name: wireguard-data
          persistentVolumeClaim:
            claimName: wireguard-admin-pvc
